@@ -1,3 +1,12 @@
+Tue, 15 Apr 2008 20:57:51 +0200 <thp@perli.net>
+Merge patch from Jérôme Chabod to really pimp the tray icon tooltip :)
+
+	* src/gpodder/gui.py: Add some error reporting and change the code a
+	bit to support the new tooltips; thanks to Jérôme Chabod
+	* src/gpodder/trayicon.py: Add support for more elaborate tray icon
+	tooltips; patch by Jérôme Chabod
+	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=97)
+
 Mon, 14 Apr 2008 13:51:23 +0200 <thp@perli.net>
 Add bug reporter to list of contributors
 
